# Powerai

./: .gitignore  .gitmodules  KB_TAXONOMY_GUIDE.md  README.md  ai_base_url.txt  artifacts.json  artifacts_summary.json  build.gradle.kts  full_device_log.txt  gradle.properties  inspect_powerai_db.py  neon_benchmark.md  payload.json  post.sh  powerai.db  pwsh_api_check.txt  runs.json  settings.gradle.kts  tmp_device.json  tmp_emb_248150669896483464.emb  tmp_embed.json  tmp_log_dump.txt  tmp_pending_1001.json  tmp_pending_1002.json  tmp_powerai_prefs.xml  validation_log.txt  window.xml  window_dump_after_sync_search.xml  window_dump_run.xml  window_dump_ui.xml
.github/: copilot-instructions.md
.github/workflows/: android-instrumentation-tests.yml  ci.yml  faiss-native.yml
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/example/powerai/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/powerai/faiss/: LocalFaissAnnRetrieverInstrumentedTest.kt
app/src/androidTest/java/com/example/powerai/worker/: EmbeddingWorkerInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/kb/铁路/专业知识/牵引变电设备值守人员值班员检修试验岗位必知必会手册/: knowledge_base.json
app/src/main/assets/kb/铁路/专业知识/牵引变电设备值守人员值班员检修试验岗位必知必会手册/截图/: manifest.json
app/src/main/assets/kb/铁路/专业知识/电力线路工必知必会手册/: knowledge_base.json
app/src/main/assets/kb/铁路/专业知识/铁路电力线路工岗位学标考标必知必会手册第2版20254/: knowledge_base.json
app/src/main/assets/kb/铁路/专业知识/铁路电力线路工岗位学标考标必知必会手册第2版20254/截图/: manifest.json
app/src/main/assets/kb/铁路/专业知识/铁运1999103号铁路电力安全工作规程/: knowledge_base.json
app/src/main/assets/kb/铁路/专业知识/铁运1999103号铁路电力安全工作规程/截图/: manifest.json
app/src/main/assets/原件截图/: README.md
app/src/main/cpp/: CMakeLists.txt  native_search.cpp  native_search_faiss.cpp
app/src/main/cpp/faiss/: README.md
app/src/main/java/com/example/powerai/: AppConfig.kt  MainActivity.kt  MyAppGlideModule.kt  PowerAiApplication.kt
app/src/main/java/com/example/powerai/data/chat/: ChatHistoryStore.kt
app/src/main/java/com/example/powerai/data/export/: ExportUtils.kt
app/src/main/java/com/example/powerai/data/importer/: BlocksJsonPatcher.kt  BlocksPreprocessor.kt  BlocksTextExtractor.kt  DocumentImportManager.kt  DocxParser.kt  FileImportManager.kt  ImportDefaults.kt  ImportMemoryBenchmark.kt  JsonResourceImporter.kt  MarkdownTableNormalizer.kt  PdfParser.kt  PdfParserFixed.kt  PdfTextLineHeuristics.kt  StreamingJsonResourceImporter.kt  TableAwarePdfTextStripper.kt  TextSanitizer.kt  TxtParser.kt
app/src/main/java/com/example/powerai/data/json/: JsonRepository.kt
app/src/main/java/com/example/powerai/data/knowledge/: KnowledgeRepository.kt
app/src/main/java/com/example/powerai/data/local/: DatabaseSearchHistoryStore.kt  LocalSearchEntry.kt  LocalSearchHistoryStore.kt  SmartSearchHistoryStore.kt
app/src/main/java/com/example/powerai/data/mappers/: KnowledgeMappers.kt
app/src/main/java/com/example/powerai/data/remote/: VectorSearchClient.kt
app/src/main/java/com/example/powerai/data/repository/: EmbeddingRepositoryImpl.kt  KnowledgeImportUriFlow.kt  KnowledgeLocalSearch.kt  KnowledgeLocalSearchQuery.kt  KnowledgeRepositoryImpl.kt  KnowledgeSearchSqlPatterns.kt  KnowledgeSnippetBuilder.kt  VectorSearchRepository.kt
app/src/main/java/com/example/powerai/data/retriever/: AnnApiService.kt  HttpAnnRetriever.kt  LocalFaissAnnRetriever.kt  NativeAnnRetriever.kt  NativeAnnSearcher.kt  NativeVectorRepository.kt
app/src/main/java/com/example/powerai/data/saf/: DocumentImportManager.kt
app/src/main/java/com/example/powerai/di/: AppModule.kt  FaissModule.kt  RepositoryModule.kt
app/src/main/java/com/example/powerai/faiss/: FaissNative.kt
app/src/main/java/com/example/powerai/navigation/: Screen.kt
app/src/main/java/com/example/powerai/ui/: AppNavigation.kt
app/src/main/java/com/example/powerai/util/: AssetModelLoader.kt  MarkwonHelper.kt  ObservabilityService.kt  PdfOutlineIndexStore.kt  PdfSourceRef.kt  PdfStorage.kt  TraceLogger.kt
app/src/main/res/layout/: activity_embedding_test.xml  activity_photo_viewer.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/powerai/: ExampleUnitTest.kt
app/src/test/java/com/example/powerai/importer/: StreamingImporterBenchmarkTest.kt  StreamingImporterRoomIntegrationTest.kt
artifacts/: artifacts_list.json
artifacts/run-22275463065-logs/: 0_build (arm64-v8a).txt  1_build (x86_64).txt
artifacts/run-22275463065-logs/build (arm64-v8a)/: 1_Set up job.txt  system.txt
artifacts/run-22275463065-logs/build (x86_64)/: 1_Set up job.txt  system.txt
config/detekt/: detekt.yml
docs/: IMPORT_AND_BENCHMARK.md  benchmark_neon.md  build_deprecations.md  faiss_ci_local.md  faiss_ndk_design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
logs/: powerai_logcat.txt
native/faiss_wrapper/: CMakeLists.txt  README.md
native/faiss_wrapper/include/: faiss_wrapper.h
native/faiss_wrapper/src/: faiss_wrapper.cpp
tmp/: ai_stream_filtered.txt  ai_stream_logcat.txt  check_after_fix.txt  verify_after_fix.txt
tools/: ParseDryRunner.java  benchmarks.csv  make_emb.py  rag_eval_runner.md
tools/embedding_prototype/: README.md  README_WORKER.md  build_index.py  check_gold.py  compute_embeddings.py  embed_batch_cli.py  eval_generated.json  eval_sample.json  evaluate.py  generate_eval.py  hybrid_retriever.py  list_kb_files.py  requirements.txt  rerank.py  retrieve.py  run_worker_adb.ps1  service.py  simulate_worker.py  test_service.py
tools/embedding_prototype/local_app_files/embeddings/: 1001.emb  1001.json  1002.emb  1002.json
tools/embedding_prototype/output/: embeddings.npy  index.faiss  metadata.json  nn_model.pkl
(+194 files in other folders)
